css/style.css
/* 
    reset 
*/

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: 'Helvetica', sans-serif;
}

/* 
    general 
*/

:root{
    --blue-color: #0483FC;
    --white-color: white;
    --cyan-color: #B5DDFF;
    --margin-top-30: 30px;
    --gray-color: rgb(78, 78, 78);
    --purple-color: #9792E4;
}

.container{
    margin: 0 auto;
    max-width: 1200px;
    padding: 0 30px;
}

.container-small{
    margin: 0 auto;
    max-width: 600px;
    padding: 0 30px;
}

.button{
    padding: 10px 15px;
    border-radius: 20px;
    border: 1px solid var(--white-color);
    background-color: var(--white-color);
}

.text-center{
    text-align: center;
}

/* 
    header 
*/

.navbar{
    width: 100%;
    background-color: var(--blue-color);
    padding: 15px;
}

.nav-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-container > ul{
    display: none;
}

.navbar li{
    display: inline-block;
    padding-left: 15px;
}

.nav-container a{
    text-decoration: none;
    color: var(--white-color);
    display: inline-block;
}

.hmb-menu{
    display: block;
}

/* 
    main 
*/

/* section 1  */

.card-big{
    width: 100%;
    background-color: var(--cyan-color);
    display: flex;
    flex-wrap: wrap;
    margin-top: 50px;
    border-radius: 30px;
}

.card{
    width: 100%;
    background-color: var(--cyan-color);
    display: flex;
    flex-wrap: wrap;
    margin-top: 50px;
    border-radius: 30px;
}

.card-top{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 30px 0;
}

.card-text{
    width: 80%;
}

.card-text > h2{
    color: var(--blue-color);
}

.card-text{
    color: var(--gray-color);
}

.card-text > i{
    font-size: 5em;
    color: var(--blue-color);
}

.apple{
    padding-right: 10px;
}

.card-text button{
    color: var(--white-color);
    background-color: var(--blue-color);
    border: 1px solid var(--blue-color);
    padding: 10px 50px;
    font-size: 1em;
    font-weight: bold;
}

.card-top h2,
.card-top p,
.card-top button,
.card-bottom img{
    margin-top: var(--margin-top-30);
}

.card-bottom{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.card-img{
    width: 80%;
}

.card-img > img{
    width: 100%;
    display: block;
}

/* section 2 */

.purple-background{
    background-color: var(--purple-color);
    padding: 50px 0;
    margin: 50px 0;
}

.left-box{
    width: 100%;
    margin-bottom: 30px;
}

.right-box{
    width: 100%;
}

.left-box .drawing-text-box{
    color: var(--white-color);
}

.left-box .drawing-text-box > h2{
    padding-top: 30px; 
}

.left-box .drawing-text-box > p{
    padding-top: 30px;    
    line-height: 1.5em;
}

.white-card{
    width: 100%;
    background-color: var(--white-color);
    border-radius: 20px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
}

.drawing-text-box{
    padding: 0 30px;
}

.white-card .drawing-text-box > p{
    font-style: italic;
}

.white-card .drawing-text-box > a{
    background-color: var(--purple-color);
    display: inline-block;
    padding: 15px;
    border-radius: 50%;
    margin: 30px 0;
}

.drawing-img-box{
    width: 80%;
}

.drawing-img-box > img{
    width: 100%;
    padding-bottom: 20px;
}

.drawing-text-box > *{
    padding: 10px 0;
}

/* section 3  */

.testimonial-info-box{
    text-align: center;
}

.testimonial-info-box > h4{
    font-size: 1em;
    margin-bottom: 30px;
}

.testimonial-info-box > h3{
    font-size: 2em;
    font-weight: bold;
    color: var(--purple-color);
    margin-bottom: 30px;
}

.testimonial-info-box > p{
    line-height: 1.5em;
}

.purple-card{
    width: 100%;
    background-color: var(--purple-color);
    margin-top: 50px;
    border-radius: 30px;
}

.card-elements{
    width: 80%;
    color: var(--white-color);
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.card-elements > p{
    line-height: 1.5em;
}

.testimonial{
    width: 200px;
    height: 200px;
}

.testimonial-pic{
    width: 100%;
    height: 100%;
    border-radius: 50%;
    object-fit: cover;
}

/* section 4 */

.purple-background > .container > h2{
    color: var(--white-color);
    text-align: center;
}

.purple-background .card{
    width: 100%;
    background-color: var(--white-color);
    display: flex;
    flex-wrap: wrap;
    margin-top: 50px;
    border-radius: 30px;
}

.number{
    font-size: 4em;
}

.purple-background .card .card-text h2{
    color: var(--purple-color);
}

.purple-background .card .card-text p{
    line-height: 1.5em;
}

.purple-background .card .card-text button{
    border: 1px solid var(--purple-color);
    background-color: var(--purple-color);
}

/* section 5 */

.about-text-col > h2{
    color: var(--purple-color);
    font-size: 2em;
    margin-bottom: 30px;
}

.testimonial{
    position: relative;
}

.testimonial > i{
    position: absolute;
    color: var(--purple-color);
    font-size: 4em;
    top: 0;
    right: 0;
}

.about-text-col > p{
    margin-bottom: 30px;
    line-height: 1.5em;
}

.about-img-col .testimonial{
    margin-bottom: 30px;
}

.about-img-col h2{
    font-size: 2em;
    color: var(--purple-color);
    line-height: 1.3em;
    margin-bottom: 30px;
}

.about-img-col > button{
    background-color: var(--purple-color);
    border: 1px solid var(--purple-color);
    color: var(--white-color);
    padding: 10px 15px;
}

/* section 6 */

.pricing-purple-background{
    background-color: var(--purple-color);
    padding: 50px 0;
    margin-top: 50px;
}

.pricing-box{
    text-align: center;
}

.pricing-box > h3{
    color: lightgray;
    font-weight: 100;
    font-size: 1em; 
    margin-bottom: 10px;
}

.pricing-box > h2{
    color: var(--white-color);
    margin-bottom: 30px;
}

.pricing-box > h1{
    color: #FDC15E;
    font-size: 3em;
    font-weight: bold;
    margin-bottom: 30px;
}

.pricing-box > p{
    color: var(--white-color);
    line-height: 1.5em;
    margin-bottom: 30px;
}

.pricing-box > a{
    display: inline-block;
}

.pricing-box > a > button{
    padding: 10px 60px;
    font-size: 1em;
    font-weight: 600;
    color: var(--purple-color);
    margin-bottom: 30px;
}

.pricing-box > div{
    color: var(--white-color);
}

.pricing-box > div a{
    color: var(--white-color);
}


/* 
    footer 
*/

.darkgray-background{
    background-color: #333333;
    padding: 50px 0;
}

.footer-box{
    text-align: center;
}

.footer-box > p{
    color: var(--white-color);
    font-size: 0.9em;
    line-height: 1.5em;
    margin-bottom: 50px;
}

.footer-box > div{
    color: var(--white-color);
}

.footer-box > div > a{
    color: var(--purple-color);
    line-height: 1.5em;
}


/* ---------------------MEDIA QUERY-------------------- */

/* Breakpoint tablet */

@media screen and (min-width: 768px) {
    
    /* main - section 1 */
    .card-container{
        display: flex;
        flex-wrap: wrap;
        margin-left: -10px;
        margin-right: -10px;
        margin-top: 20px;
    }

    .card-big{
        width: calc(((100% / 3) * 2) - 20px);
        margin: 10px 10px;
    }

    .card{
        width: calc((100% / 3) - 20px);
        margin: 10px 10px;
    }

    .card-bottom{
        justify-content: flex-start;
    }

    /* main - section 3 */
    

    .card-top{
        display: flex;
        justify-content: flex-start;
        padding-left: 20px;
    }

    .testimonial{
        margin-right: 20px;
    }

    .quote{
        width: 60%;
        text-align: left;
    }

    /* main - section 4 */

    .number-cards-container{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }

    .number-cards-container .card{
        width: calc(90% / 2);
        margin-bottom: 0;
    }

    /* main - section 5 */
    
    .row{
        display: flex;
    }
    
    .about-text-col{
        width: 70%;
        padding: 0 30px;
    }

    .about-img-col{
        width: 30%;
    }
}

/*  Breakpoint desktop */

@media screen and (min-width: 992px) {

    /* header */
    .nav-container > ul{
        display: block;
    }

    .hmb-menu{
        display: none;
    }

    /* main - section 1 */
    .card-container{
        display: flex;
        flex-wrap: wrap;
        margin-left: -10px;
        margin-right: -10px;
        margin-top: 20px;
    }

    .card-big{
        width: calc(((100% / 3) * 2) - 20px);
        margin: 10px 10px;
    }

    .card{
        width: calc((100% / 3) - 20px);
        margin: 10px 10px;
    }

    .card-big .card-top{
        width: 60%;
    }

    .card-big .card-bottom{
        width: 40%;
        justify-content: center;
    }

    /* main - section 2 */
    
    .left-box{
        width: 50%;
        margin-bottom: 0;
    }

    .left-box > .drawing-text-box > p{
        padding-bottom: 0;
    }

    .right-box{
        width: 50%;
    }

    .sec-2-content-box{
        display: flex;
        flex-wrap: wrap;
        align-items: flex-end;
    }

    .white-card{
        width: 70%;
    }

    /* main - section 4 */

    .number-cards-container{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }
    
    .number-cards-container .card{
        width: calc(90% / 3);
         margin-bottom: 0;
    }
}

